# fastapi-nano

./: .dockerignore  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc  Caddyfile  Dockerfile  LICENSE  Makefile.dev  README.md  cookiecutter.json  docker-compose.yml  makefile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  script.py  script.sh
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  build_docker.yml  build_push.yml  ci.yml  run_tests.yml  test.yml
app/: main.py
app/api_a/: mainmod.py  submod.py
app/api_b/: mainmod.py  submod.py
app/apis/{{cookiecutter.api2}}/: mainmod.py
app/core/: auth.py  config.py
app/routes/: views.py
app/tests/: test_api.py  test_apis.py  test_functions.py
dockerfiles/: Dockerfile-310  Dockerfile-38  Dockerfile-39
dockerfiles/python310/: Dockerfile
dockerfiles/python311/: Dockerfile
dockerfiles/python312/: Dockerfile
dockerfiles/python313/: Dockerfile
dockerfiles/python314/: Dockerfile
dockerfiles/python38/: Dockerfile
dockerfiles/python39/: Dockerfile
scripts/: docker_ci.sh  update_deps.sh
svc/: __init__.py  main.py
svc/apis/: schemas.py
svc/apis/api_a/: mainmod.py  submod.py
svc/apis/api_b/: submod.py
svc/core/: auth.py  config.py  logger.py
svc/routes/: views.py
svc/tests/: test_apis.py  test_functions.py  test_logger.py
{{cookiecutter.repo_name}}/apis/{{cookiecutter.api1}}/: mainmod.py  submod.py
{{cookiecutter.repo_name}}/routes/: views.py
{{cookiecutter.repo_name}}/tests/: test_api.py
{{cookiecutter.repo_name}}/{{cookiecutter.api1}}/: mainmod.py
{{cookiecutter.repo}}/: .dockerignore  .env  .flake8  .isort.cfg  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  makefile  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
{{cookiecutter.repo}}/app/: main.py
{{cookiecutter.repo}}/app/apis/{{cookiecutter.api_a}}/: mainmod.py
{{cookiecutter.repo}}/app/apis/{{cookiecutter.api_b}}/: mainmod.py  submod.py
{{cookiecutter.repo}}/app/core/: auth.py  config.py
{{cookiecutter.repo}}/app/routes/: views.py
{{cookiecutter.repo}}/app/tests/: test_api.py  test_apis.py  test_functions.py
