[tool.poetry]
name = "fastapi-nano" #"{{cookiecutter.repo}}"
version = "0.1.0"
description = ""
authors = ["red"] #["{{cookiecutter.fname}} <{{cookiecutter.email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
python-dotenv = "^0.13.0"
pyjwt = "^1.7.1"
passlib = "^1.7.2"
python-multipart = "^0.0.5"
bcrypt = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
